--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Cypress run
+        id: cypress
         uses: cypress-io/github-action@v5
         with:
           build: yarn build
@@ -43,11 +44,14 @@ jobs:
           wait-on: http://localhost:3000
           wait-on-timeout: 120
           browser: edge
+        continue-on-error: true
       - uses: actions/upload-artifact@v3
         with:
           name: cypress-videos
           path: cypress/videos
-
+      - name: Check on failures
+        if: steps.cypress.outcome == 'failure'
+        run: exit 1
   docker:
     runs-on: ubuntu-latest
     needs: e2e
