--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-plugin-istanbul": "^6.1.1",
     "cross-env": "^7.0.3",
     "cypress": "13.4.0",
+    "cypress-wait-for-stable-dom": "^0.1.0",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
     "eslint-plugin-cypress": "^2.15.1",
