--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - run: yarn install --immutable --immutable-cache --check-cache
-      - run: yarn lint
       - run: yarn build
       - run: yarn e2e:headless
+        id: cypress
         continue-on-error: true
       - uses: actions/upload-artifact@v3
         with:
