--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           build: yarn build
-          start: yarn start
+          start: cp .next/standalone/server.js . && node server.js
           wait-on: http://localhost:3000
           wait-on-timeout: 120
         env:
