--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,12 +35,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - run: yarn install --immutable --immutable-cache --check-cache
+      - run: yarn build
+        env:
+          NEXT_PUBLIC_EAB_HOST: 'https://eab.api.hm.edu'
+          NEXT_PUBLIC_ACME_HOST: 'https://acme.hm.edu'
+          NEXT_PUBLIC_PKI_HOST: 'https://pki.api.hm.edu'
+          NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.hm.edu'
+          NEXT_PUBLIC_AUTH_IDP: 'https://sso.hm.edu'
+          NEXT_PUBLIC_ORGANIZATION_NAME: 'Hochschule München'
+          NEXT_PUBLIC_DOCS_URL: 'https://conwiki.cc.hm.edu/confluence/pages/viewpage.action?pageId=198048309'
+      - name: Copy standalone server
+        run: cp .next/standalone/server.js server.js
       - name: Cypress run
         id: cypress
         uses: cypress-io/github-action@v5
         with:
-          build: yarn build
-          start: cp .next/standalone/server.js . && node server.js
+          start: node server.js
           wait-on: http://localhost:3000
           wait-on-timeout: 120
         env:
