--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,10 @@ jobs:
       - run: yarn install --immutable --immutable-cache --check-cache
       - run: yarn build
         env:
-          NEXT_PUBLIC_EAB_HOST: 'https://eab.api.example.edu'
-          NEXT_PUBLIC_ACME_HOST: 'https://acme.example.edu'
-          NEXT_PUBLIC_PKI_HOST: 'https://pki.api.example.edu'
-          NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.example.edu'
+          NEXT_PUBLIC_EAB_HOST: 'https://eab.api.hm.edu'
+          NEXT_PUBLIC_ACME_HOST: 'https://acme.hm.edu'
+          NEXT_PUBLIC_PKI_HOST: 'https://pki.api.hm.edu'
+          NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.hm.edu'
           NEXT_PUBLIC_AUTH_IDP: 'https://sso.hm.edu'
           NEXT_PUBLIC_ORGANIZATION_NAME: 'Hochschule München'
           NEXT_PUBLIC_DOCS_URL: 'https://conwiki.cc.hm.edu/confluence/pages/viewpage.action?pageId=198048309'
@@ -58,10 +58,10 @@ jobs:
           wait-on-timeout: 120
         env:
           NEXT_PUBLIC_DISABLE_CSP: true
-          NEXT_PUBLIC_EAB_HOST: 'https://eab.api.example.edu'
-          NEXT_PUBLIC_ACME_HOST: 'https://acme.example.edu'
-          NEXT_PUBLIC_PKI_HOST: 'https://pki.api.example.edu'
-          NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.example.edu'
+          NEXT_PUBLIC_EAB_HOST: 'https://eab.api.hm.edu'
+          NEXT_PUBLIC_ACME_HOST: 'https://acme.hm.edu'
+          NEXT_PUBLIC_PKI_HOST: 'https://pki.api.hm.edu'
+          NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.hm.edu'
           NEXT_PUBLIC_AUTH_IDP: 'https://sso.hm.edu'
           NEXT_PUBLIC_ORGANIZATION_NAME: 'Hochschule München'
           NEXT_PUBLIC_DOCS_URL: 'https://conwiki.cc.hm.edu/confluence/pages/viewpage.action?pageId=198048309'
