--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
 
   e2e:
     runs-on: ubuntu-22.04
+    container:
+     image: cypress/browsers:node18.12.0-chrome106-ff106
+     options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v4
