--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
   e2e:
     runs-on: ubuntu-22.04
     container:
-     image: cypress/browsers:node18.12.0-chrome106-ff106
+     image: cypress/browsers:node-20.9.0-chrome-118.0.5993.88-1-ff-118.0.2-edge-118.0.2088.46-1
      options: --user 1001
     steps:
       - name: Checkout
