--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,11 @@ jobs:
 
   e2e:
     runs-on: ubuntu-22.04
-    container:
-     image: cypress/browsers:node-20.9.0-chrome-118.0.5993.88-1-ff-118.0.2-edge-118.0.2088.46-1
-     options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Use Node.js 21
+        uses: actions/setup-node@v4
       - run: yarn install --immutable --immutable-cache --check-cache
       - run: yarn build
         env:
