--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.hm.edu'
           NEXT_PUBLIC_AUTH_IDP: 'https://sso.hm.edu'
           NEXT_PUBLIC_ORGANIZATION_NAME: 'Hochschule München'
-          NEXT_PUBLIC_DOCS_URL: 'https://conwiki.cc.hm.edu/confluence/pages/viewpage.action?pageId=198048309'
+          NEXT_PUBLIC_DOCS_URL: 'https://collab.dvb.bayern/pages/viewpage.action?pageId=441753602'
 
   e2e:
     runs-on: ubuntu-22.04
@@ -64,7 +64,7 @@ jobs:
           NEXT_PUBLIC_DOMAIN_HOST: 'https://domain.api.hm.edu'
           NEXT_PUBLIC_AUTH_IDP: 'https://sso.hm.edu'
           NEXT_PUBLIC_ORGANIZATION_NAME: 'Hochschule München'
-          NEXT_PUBLIC_DOCS_URL: 'https://conwiki.cc.hm.edu/confluence/pages/viewpage.action?pageId=198048309'
+          NEXT_PUBLIC_DOCS_URL: 'https://collab.dvb.bayern/pages/viewpage.action?pageId=441753602'
           HOST: "0.0.0.0"
           NEXT_PUBLIC_CI: "true"
         continue-on-error: true
@@ -127,4 +127,58 @@ jobs:
             NEXT_PUBLIC_DOMAIN_HOST=https://domain.api.hm.edu
             NEXT_PUBLIC_AUTH_IDP=https://sso.hm.edu
             NEXT_PUBLIC_ORGANIZATION_NAME=Hochschule München
-            NEXT_PUBLIC_DOCS_URL=https://conwiki.cc.hm.edu/confluence/pages/viewpage.action?pageId=198048309
+            NEXT_PUBLIC_DOCS_URL=https://collab.dvb.bayern/pages/viewpage.action?pageId=441753602
+
+  dockerHof:
+    runs-on: ubuntu-latest
+    needs: e2e
+    env:
+      # Use docker.io for Docker Hub if empty
+      REGISTRY: ghcr.io
+      # github.repository as <account>/<repo>
+      IMAGE_NAME: hm-edu/portal-frontend-hof
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=tag
+            type=ref,event=pr
+            type=raw,value={{branch}}-{{sha}}-{{date 'X'}},enable=${{ github.event_name != 'pull_request' }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' && github.actor != 'dependabot[bot]' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          secrets: |
+            SENTRY_ENVIRONMENT=${{ github.ref_name == 'main' && 'production' || 'staging' }}
+            SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
+            SENTRY_RELEASE=${{ github.sha }}
+            NEXT_PUBLIC_SENTRY_DSN=${{ secrets.SENTRY_DSN }}
+            NEXT_PUBLIC_EAB_HOST=https://eab.pki.hof-university.de
+            NEXT_PUBLIC_ACME_HOST=https://acme.pki.hof-university.de
+            NEXT_PUBLIC_PKI_HOST=https://rest.pki.hof-university.de
+            NEXT_PUBLIC_DOMAIN_HOST=https://domains.pki.hof-university.de
+            NEXT_PUBLIC_AUTH_IDP=https://idp.hof-university.de
+            NEXT_PUBLIC_ORGANIZATION_NAME=Hochschule Hof
+            NEXT_PUBLIC_DOCS_URL=https://collab.dvb.bayern/pages/viewpage.action?pageId=441753602
