--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Build Next.JS Webapp
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js 21
@@ -32,6 +32,7 @@ jobs:
 
   e2e:
     runs-on: ubuntu-22.04
+    name: Run E2E Cypress tests
     container:
      image: cypress/browsers:node-20.9.0-chrome-118.0.5993.88-1-ff-118.0.2-edge-118.0.2088.46-1
      options: --user 1001
@@ -100,6 +101,7 @@ jobs:
           favicon: resources/hs-hof/favicon.ico
           image_name: hm-edu/portal-frontend-hof
     runs-on: ubuntu-latest
+    name: Docker Image for ${{ matrix.university.name }}
     needs: e2e
     env:
       # Use docker.io for Docker Hub if empty
