--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/x-data-grid": "7.12.0",
     "@next-safe/middleware": "0.10.0",
     "@sentry/nextjs": "8.22.0",
+    "@stylistic/eslint-plugin": "^2.6.1",
     "@types/node-forge": "1.3.11",
     "asn1js": "3.0.5",
     "axios": "1.7.3",
