--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,8 @@ extends:
   - "plugin:@next/next/recommended"
   - "plugin:react/recommended"
   - "plugin:react/jsx-runtime"
+  - "plugin:import/recommended"
+  - "plugin:import/typescript"
 settings:
   "react":
     version: "detect"
@@ -21,6 +23,18 @@ settings:
     "node":
       "extensions": [".js", ".jsx", ".ts", ".tsx"]
 rules:
+  'import/no-unresolved': 'off'
+  'import/order':
+    - warn
+    - groups:
+        - builtin
+        - external
+        - internal
+        - parent
+        - sibling
+        - index
+        - unknown
+      alphabetize: { order: 'asc', caseInsensitive: true }
   comma-dangle:
     - error
     - always-multiline
