--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
     "@fontsource/roboto": "5.1.0",
     "@mui/icons-material": "6.1.1",
     "@mui/material": "6.1.1",
+    "@mui/material-nextjs": "^6.1.1",
     "@mui/system": "6.1.1",
     "@mui/x-data-grid": "7.18.0",
-    "@next-safe/middleware": "0.10.0",
     "@sentry/nextjs": "8.32.0",
     "@types/node-forge": "1.3.11",
     "asn1js": "3.0.5",
     "axios": "1.7.7",
     "download": "8.0.0",
     "elliptic": "6.5.7",
+    "eslint-plugin-import": "^2.30.0",
     "is-valid-domain": "0.1.6",
     "jwt-decode": "4.0.0",
     "moment": "2.30.1",
     "next": "14.2.13",
-    "next-auth": "4.24.7",
+    "next-auth": "4.24.8",
     "node-forge": "1.3.1",
     "pkijs": "3.2.4",
     "prop-types": "15.8.1",
