optimize some ci stuff and generic acme recommendation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,9 +156,11 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' && github.actor != 'dependabot[bot]' }}
+          push: ${{ github.event_name != 'pull_request' && github.ref_name == github.event.repository.default_branch }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha,scope=${{ github.workflow }}
+          cache-to: type=gha,scope=${{ github.workflow }},mode=max
           secrets: |
             SENTRY_ENVIRONMENT=${{ github.ref_name == 'main' && 'production' || 'staging' }}
             SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
