--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portal-frontend-next",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.2.0",
+  "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001",
   "scripts": {
     "postinstall": "patch-package",
     "dev": "next dev",
@@ -73,5 +73,12 @@
     "start-server-and-test": "2.0.10",
     "typescript": "5.7.3",
     "webpack": "5.97.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@sentry/cli",
+      "cypress",
+      "sharp"
+    ]
   }
 }
